[gd_scene load_steps=2 format=3 uid="uid://cmtcg0j0tdjsy"]

[ext_resource type="Script" path="res://tutorial.gd" id="1_yhvag"]

[node name="Tutorial" type="CanvasLayer"]
script = ExtResource("1_yhvag")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 108.0
offset_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0.34902, 0.203922, 1)

[node name="VBox" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -20.0
offset_right = 47.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBox" type="HBoxContainer" parent="ColorRect/VBox"]
layout_mode = 2
alignment = 1

[node name="Message" type="Label" parent="ColorRect/VBox/HBox"]
layout_mode = 2
text = "Sample Text
"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="resized" from="ColorRect/VBox" to="." method="_on_v_box_resized"]
[connection signal="timeout" from="MessageTimer" to="." method="on_message_timer_end"]
